--- a/Journal_Entry.csproj
+++ b/Journal_Entry.csproj
@@ -68,6 +68,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.8" />
         <PackageReference Include="PdfSharpCore" Version="1.3.67" />
+        <PackageReference Include="QuestPDF" Version="2025.12.3.1-alpha2" />
         <PackageReference Include="sqlite-net-pcl" Version="1.10.196-beta" />
     </ItemGroup>
 
